<resources>
    <string name="app_name">Surveybaba</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="edit">Edit</string>
    <string name="measurement">Measuring</string>
    <string name="blueTooth_manager">BlueTooth Manager</string>
    <string name="my_subscription">My Subscription</string>
    <string name="surveybaba_store">Surveybaba Store</string>
    <string name="backup_manager">Backup Manager</string>
    <string name="settings">Settings</string>
    <string name="form">Form</string>
    <string name="hybrid">HYBRID</string>
    <string name="terrain">TERRAIN</string>
    <string name="normal">NORMAL</string>
    <string name="backup_of_days">Backup of days</string>
    <string name="manual_backup">Manual Backup</string>
    <string name="backup_all">Backup All</string>
    <string name="backup_project_wise">Backup Project wise</string>
    <string name="back_up_setting_only">back up setting only</string>
    <string name="restore">Restore</string>
    <string name="controlling">Controlling</string>
    <string name="maps">Maps</string>
    <string name="guidance">Guidance</string>
    <string name="display">Display</string>
    <string name="map_screen">Map Screen</string>
    <string name="panels_buttons">Panels &amp; Buttons</string>
    <string name="track_recording">Track Recording</string>
    <string name="online_maps">Online maps</string>
    <string name="offline_maps">Offline Maps</string>
    <string name="auxiliary_graphics">Auxiliary graphics</string>
    <string name="advanced_features">Advanced features</string>
    <string name="full_Screen">Full Screen</string>
    <string name="orientation_lock">Orientation Lock</string>
    <string name="screen_on_off">Screen on/off</string>
    <string name="map_control_style">Map Style</string>
    <string name="hold_map_center">Hold map Center</string>
    <string name="two_finger_measuring">Two finger Measuring</string>
    <string name="map_cursor">Map Cursor</string>
    <string name="hardware_control">Hardware control</string>
    <string name="top_panel_hiding">Top panel hiding</string>
    <string name="bottom_panel_hiding">Bottom Panel Hiding</string>
    <string name="panel_hiding">Panel Hiding</string>
    <string name="panels_and_screen_orientation">Panels and Screen Orientation</string>
    <string name="panel_hiding_timeout">Panel hiding timeout</string>
    <string name="cache_maps">Cache maps</string>
    <string name="cached_mapes_only">Cached Mapes only</string>
    <string name="automatic_map_loading">Automatic map loading</string>
    <string name="text_size">Text size</string>
    <string name="dynamic_elevation">Dynamic elevation</string>
    <string name="cursor_to_position_line">Cursor to position line</string>
    <string name="optimize_raster_map_resolution">Optimize raster map resolution</string>
    <string name="magnify_all_maps">Magnify all maps</string>
    <string name="map_shading">Map shading</string>
    <string name="map_color_mode">map color mode</string>
    <string name="Point">Point</string>
    <string name="Line">Line</string>
    <string name="Polygone">Polygone</string>
    <string name="WalkingPolygone">WalkingPolygone</string>
    <string name="cameraPoint">cameraPoint</string>
    <string name="PolygonViewLayer">PolygonViewLayer</string>
    <string name="PolylineViewLayer">PolylineViewLayer</string>
    <string name="PointViewLayer">PointViewLayer</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="minimum_2_point">Minimum 2 point required</string>
    <string name="map_normal">Normal</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_non">None</string>
    <string name="user_registration_successfully">User Registration Successfully</string>
    <string name="user_registration">User Registration</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="download">Download</string>
    <string name="synchronization">Synchronization</string>
    <string name="logout">Logout</string>
    <string name="basemap">Basemap</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_timeline_image">Select timeline image</string>
    <string name="selectImage">Select Image</string>
    <string name="type_your_description">Type your description</string>
    <string name="type_your_username">Type your username</string>
    <string name="type_your_password">Type your password</string>
    <string name="Please_enter_emailid">Please enter emailid</string>
    <string name="Please_enter_firstname">Please enter firstname</string>
    <string name="Please_enter_lastname">Please enter lastname</string>
    <string name="Please_enter_valid_emailid">Please enter valid emailid</string>
    <string name="Please_enter_username">Please enter username</string>
    <string name="Please_enter_password">Please enter password</string>
    <string name="No_Innter_Connection">No Internet Connection</string>
    <string name="type_your_emailid">Type your EmailID</string>
    <string name="type_your_firstname">Type your Firstname</string>
    <string name="type_your_lastname">Type your Lastname</string>
    <string name="projects">Projects</string>
    <string name="lbl_Submit">Submit</string>
    <string name="lbl_Exit">Exit</string>
    <string name="lbl_No_Data_Found">No Data Found</string>
    <string name="lbl_Something_wrong_please_try_again">Something wrong, Please try again</string>
    <string name="lblAre_you_sure">Are you sure want to logout?</string>
    <string name="lblRegistration"><u>Registration</u></string>
    <string name="lblForgotPassword"><u>Forgot Password</u></string>
    <string name="lblFaceRecognition"><u>Face Recognition</u></string>
    <string name="lbl_Timeline_Add_Successfully">Timeline Add Successfully</string>
    <string name="lbl_Save_Successfully">Save Successfully</string>
    <string name="lbl_Data_Send_Successfully">Data Send Successfully</string>
    <string name="lbl_Ok">Ok</string>
    <string name="lbl_File_upload">File upload...</string>
    <string name="lbl_Image_upload">Image upload...</string>
    <string name="lbl_Select_Basemap">Select Basemap</string>
    <string name="please_wait">Please wait</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblLogout">Logout</string>
    <string name="lblSync">Sync</string>
    <string name="lbl_No_project_assigned_to_the_user">No project assigned to the user, Please contact to admin.</string>
    <string name="lbl_No_form_assigned_to_the_user">No form assigned to the user, Please contact to admin.</string>
    <string name="lbl_No_form_details_assigned_to_the_user">Form details not getting, Please contact to admin.</string>
    <string name="permissionPermanentlyDeclined">Bummer! You have permanently declined the location permission. But
        this app is so cool and needs your location because&#8230; you know. Click "OK" to change the permission
        settings.</string>
    <string name="switchOnLocationShort">you seem to have disabled location services at the moment. This app is
        really cool and needs your location to use the location feature. To continue, please click on "OK".</string>
    <string name="switchOnLocationLong">you seem to have disabled location services at the moment. This app is
        really cool and needs your location to use the location feature. To continue, please click on "OK" and enable
        location. If you\'re worried about battery usage, be sure to switch to energy saving mode. </string>
    <string name="select">Select</string>
    <string name="select_date_time">Select date time</string>
    <string name="add_timeline">Add Timeline</string>
    <string name="permission_storage_title">Storage Permission</string>
    <string name="permission_storage_description">Grant storage permission to enable load or store image from/to storage</string>
    <string name="permission_camera_title">Camera Permission</string>
    <string name="permission_camera_description">Grant Camera permission to enable Camera capture feature</string>
    <string name="permission_fine_location_title">Location</string>
    <string name="permission_location_description" translatable="false">Grant storage permission to enable get location</string>
    <string name="select_image">Select Image</string>
    <string name="style_label_retro">Retro</string>
    <string name="style_label_night">Night</string>
    <string name="style_label_grayscale">Grayscale</string>
    <string name="style_label_no_pois_no_transit">No POIs or transit</string>
    <string name="style_label_default">Default</string>
    <string name="map_screen_orientation_system_default">Map screen orientation</string>
    <string name="msg_service">Closing this will result in app malfunctioning.</string>
    <string name="text_exit">Exit</string>
    <string name="notifications_of_points">Notifications of points</string>
    <string name="set_notifications_of_approaching_points">Set notifications of approaching points</string>
    <string name="style_on_maps">Style on Maps</string>
    <string name="line_color">Line color</string>
    <string name="line_size">Line Size</string>
    <string name="recording_profiles">Recording Profiles</string>
    <string name="recording_profile">Recording Profile</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="define_your_own_activity_and_other_parameters">Define your own activity and other parameters</string>
    <string name="name">Name</string>
    <string name="metric_m_km">Metric (km)</string>
    <string name="yd_square">yd2</string>
    <string name="meters">meters</string>
    <string name="kmph">km/h</string>
    <string name="degree">Degree</string>
    <string name="celsius">Celsius</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="angle">Angle</string>
    <string name="temperature">Temperature</string>
    <string name="todo">TODO</string>
    <string name="configuringDGPS">Configuring Location on Android with your DGPS Receiver </string>
    <string name="DeviceConnectionStep">How to Connect your DGPS to Android Device:</string>
    <string name="StepToConnectionDGPS"><b>Step 1:</b> Download your DGPS App(Eg. EOS Tools Pro) from the Google Play Store.\n\n<b>Step 2:</b> Launch the Application on your Device.\n\n<b>Step 3:</b> Select your Device then Enabling Mock Location on your Device.</string>
    <string name="StepEnableMockLocation"><b>Note:</b> Mock Location is available in the "Hidden" Developer Mode on your Android device. </string>
    <string name="StepHowToEnable1">Here is How to enable it:\n\n<b>Step 1:</b> First go to <b>"Settings"</b> —> navigate to <b>"About Device"</b> —> and finally tap multiple times on <b>"Build number"</b> at the bottom of the menu to activate the Developer Mode.</string>
    <string name="StepHowToEnable2"><b>Step 2:</b> Now, a new<b>"Developer Options"</b> menu will be available under <b>"Settings"</b> —> <b>"System"</b>.</string>
    <string name="StepHowToEnable3"><b>Step 3:</b> In this <b>"Developer Options"</b> menu scroll down to <b>"Debugging"</b>, and tap on <b>"Select mock location app"</b>.</string>
    <string name="StepHowToEnable4"><b>Step 4:</b> Finally, select your DGPS Application Name(Eg. EOS Tools Pro) as the mock location app and close the menu.</string>
    <string name="StepConnectToSurveybabaApp">"After Connection your Device to DGPS Application navigate to SurveyBaba App And Start Working…"</string>
</resources>