<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modules.BluetoothModule.BluetoothActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/configuringDGPS"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/dgps_icon"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/DeviceConnectionStep"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepToConnectionDGPS"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepEnableMockLocation"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepHowToEnable1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerInside"
                android:src="@drawable/help1"
                android:contentDescription="@string/todo"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepHowToEnable2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerInside"
                android:src="@drawable/help2"
                android:contentDescription="@string/todo"
                />


            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepHowToEnable3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerInside"
                android:src="@drawable/help3"
                android:contentDescription="@string/todo"
                />


            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepHowToEnable4"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerInside"
                android:src="@drawable/help4"
                android:contentDescription="@string/todo"
                />


            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/StepConnectToSurveybabaApp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </LinearLayout>
    </ScrollView>


    <!--    <LinearLayout-->
<!--        android:id="@+id/deviceNotFoundLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:gravity="center"-->
<!--        android:visibility="gone"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_above="@+id/pairDeviceButton">-->


<!--        <TextView-->
<!--            android:text="Connection to the Device"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="25sp"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->


<!--        <TextView-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="No Devices was Found"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->


<!--        <TextView-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="Ensure that Bluetooth is set on Device and devices are paired"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

<!--    </LinearLayout>-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/bluetoothDeviceListView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_above="@+id/pairDeviceButton"-->
<!--        android:visibility="visible" />-->


<!--&lt;!&ndash;    <ScrollView&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="300dp"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_below="@+id/bluetoothDeviceListView">&ndash;&gt;-->


<!--&lt;!&ndash;        <TextView&ndash;&gt;-->
<!--&lt;!&ndash;            android:id="@+id/tv"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"/>&ndash;&gt;-->

<!--&lt;!&ndash;    </ScrollView>&ndash;&gt;-->

<!--    <Button-->
<!--                android:id="@+id/pairDeviceButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Pair Device"-->
<!--                android:padding="10dp"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                />-->

</RelativeLayout>